--- a/code/style.css
+++ b/code/style.css
@@ -34,6 +34,10 @@ h4 {
   font-weight: lighter;
 }
 
+h4 {
+  text-align: center;
+}
+
 p {
   font-family: var(--paragraph-font-family);
 }
@@ -54,6 +58,11 @@ figcaption {
   text-align: center;
   max-width: 90%;
   padding: 5px 0 5px 0;
+}
+
+.figcaption-other-news {
+  background-color: var(--secondary-bg-color);
+  max-width: 90%;
 }
 
 .border-container {
@@ -174,8 +183,16 @@ a:hover {
   margin: 30px 30px 20px 50px;
 }
 
-.other-news-div {
+/*.other-news-div {
   text-align: left;
+}*/
+
+.other-news-paragraph {
+  border: 1px solid var(--border-color);
+}
+
+.medium-grid-item {
+  margin: 5px 20px 5px 20px;
 }
 
 .img-other-news-one,
@@ -184,7 +201,7 @@ a:hover {
 .img-other-news-four {
   display: flex;
   height: 60%;
-  max-width: 70%;
+  max-width: 90%;
   border-radius: 10%;
 }
 
